# crypto-sentiment-data-pipeline

./: .gitignore  .prefectignore  Dockerfile  LICENSE  README.md  extract-data.ipynb  pyproject.toml  requirements.txt
.github/actions/blocks/: action.yml
.github/actions/build-image/: action.yml
.github/actions/build-infra/: action.yml
.github/actions/container-image/: action.yml
.github/actions/create-blocks/: action.yml  blocks.py
.github/actions/delete-blocks/: action.yml
.github/actions/delete-deployment/: action.yaml
.github/actions/delete-flows/: action.yaml  action.yml
.github/actions/delete-gcp/: action.yml
.github/actions/delete-infra/: action.yml
.github/actions/delete-vm/: action.yml
.github/actions/deploy-container/: action.yml
.github/actions/deploy-flows/: action.yml
.github/actions/deploy-vm/: action.yml
.github/actions/setup-agent/: action.yaml
.github/actions/setup-blocks/: action.yaml  action.yml
.github/actions/setup-cloud-run/: action.yaml
.github/actions/setup-gcp/: action.yaml  (+1 more)
.github/workflows/: blocks.yml  container-image.yml  delete-setup.yaml  delete-setup.yml  deploy-flows.yml  getting-started.yml  init-setup.yaml  init-setup.yml  reset-deployment.yml  reset-setup.yaml  setup-infra.yml  setup_agent.yml  test-secrets.yml
dbt/fear_and_greed/: dbt_project.yml
docker/: agent.Dockerfile  deployments.Dockerfile
flows/: hello.py  main.py  sub.py  test_flow.py
prefect/flows/: extract_load_data.py  main.py  transform_data.py
prefect_utils/: bigquery_pandas.py
setup/: init_sa.sh
terraform/: avrs.tf  main.tf
(+8 files in other folders)
