[tool.poetry]
name = "crypto-fear-and-greed-analysis"
version = "0.1.0"
description = "lala"
authors = ["Kirill Kuznetsov <kirill@kkuznets.dev>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "crypto_fear_and_greed_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.10.4"
prefect-gcp = {extras = ["artifacts", "bigquery", "cloud-storage"], version = "^0.4.1"}

[tool.poetry.group.prefect.dependencies]
pandas = "^2.0.0"
requests = "^2.28.2"
pyarrow = "^11.0.0"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.0"
prefect-dbt = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "venv"